Name: hdm
Version: 0.0
Synopsis: a small display manager.  Loads from shell and just provides a text based menu for selecting the xinitrc file of your choice.
License: GPL3
License-file: LICENCE
Author: Timothy Hobbs & Cheater__
Maintainer: Timothy Hobbs <timothyhobbs@seznam.cz>

cabal-version: >= 1.2

Executable hdm
 build-depends: vty
 Main-is: hdm.lhs
 other-modules : Menu
