Name: hdm
Version: 0.0
Synopsis: a small display manager.  Loads from shell and just provides a text based menu for selecting the xinitrc file of your choice.
License: GPL-3
License-file:COPYING 
Author: Timothy Hobbs & Cheater__
Maintainer: Timothy Hobbs <timothyhobbs@seznam.cz>
build-type:Simple

cabal-version: >= 1.2

Executable hdm
 build-depends:base,vty,unix,process,directory
 Main-is: hdm.lhs
 ghc-options: -XDoAndIfThenElse
